# esvc

./: .gitignore  Cargo.nix  README.md  default.nix
crates/esvc-core/: Cargo.toml
crates/esvc-core/src/: apply.rs  dot.rs  engine.rs  graph.rs  hash.rs  lib.rs  state.rs  utils.rs  workcache.rs
crates/esvc-indra/: Cargo.toml
crates/esvc-indra/src/: lib.rs  main.rs  pymod.rs  utils.rs
crates/esvc-traits/: Cargo.toml
crates/esvc-traits/src/: lib.rs
crates/esvc-wasm/: Cargo.toml
crates/esvc-wasm/src/: lib.rs
crates/example-sear/: Cargo.toml
crates/example-sear/fuzz/: Cargo.toml
crates/example-sear/fuzz/fuzz_targets/: sear0.rs
crates/example-sear/src/: main.rs
crates/exvc/: Cargo.toml
crates/exvc/src/: addr.rs  en.rs  main.rs
wasm-crates/: Cargo.toml
wasm-crates/example-sear/: Cargo.toml
wasm-crates/example-sear/src/: lib.rs
