[package]
name = "esvc-core"
description = "Core of ESVC (event sourcing version control)"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/zseri/esvc"

[dependencies]
base64 = "0.13"
bincode = "1.3"
blake2 = "0.10"
rayon = "1.5"
serde_with = "1.11"
thiserror = "1.0"

[dependencies.esvc-traits]
version = "0.0"
path = "../esvc-traits"

[dependencies.serde]
version = "1.0"
features = ["derive"]
