[package]
name = "esvc-core"
description = "Core of ESVC (event sourcing version control)"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/zseri/esvc"

[dependencies]
base64 = "0.13"
bincode = "1.3"
blake2 = "0.10"
rayon = "1.5"
serde_with = "1.11"
thiserror = "1.0"
tracing = "0.1"

[dependencies.esvc-traits]
version = "0.1"
path = "../esvc-traits"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
tracing-subscriber = "0.3"

[features]
# internal, used to print traces during tests for debugging
test--trace = []
