[package]
name = "esvc-indra"
description = "Python module as frontend for ESVC with indradb as backend"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lib]
name = "escv_indra"
crate-type = ["cdylib"]

[dependencies]
base32 = "0.4"
serde_json = "1.0"
uuid = "~0.8.2"

[dependencies.esvc-core]
path = "../esvc-core"

[dependencies.indradb]
version = "3.0"
package = "indradb-lib"

[dependencies.pyo3]
version = "0.15"
features = ["extension-module"]
