[package]
name = "esvc-traits"
description = "Traits for ESVC"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/zseri/esvc"

[dependencies]

[dependencies.anyhow]
version = "1.0"
default-features = false

[dependencies.serde]
version = "1.0"
default-features = false
