[package]
name = "esvc-wasm"
description = "WASM engine for ESVC"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/zseri/esvc"

[dependencies]
rayon = "1.5"

[dependencies.esvc-traits]
path = "../esvc-traits"
version = "0.0"

[dependencies.wasmtime]
version = "0.33"
default-features = false
features = ["cranelift", "parallel-compilation"]
