[package]
name = "esvc-wasm"
description = "WASM engine for ESVC"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/zseri/esvc"

[dependencies]
anyhow = "1.0"
rayon = "1.5"

[dependencies.esvc-traits]
path = "../esvc-traits"
version = "0.1"

[dependencies.wasmtime]
version = "0.33"
default-features = false
features = ["cranelift", "parallel-compilation"]
